--- a/css/main.css
+++ b/css/main.css
@@ -34,10 +34,40 @@ nav li{
     margin-top: 4px;
     border-radius: 5px;
     margin-right: 5px;
-    color: white;
+    color: #2b2b2b;
+    background-color: white;
 }
 
 nav li:hover{
+    background-color: #2b2b2b;
+    color: white;
+}
+
+header{
+    width: 100%;
+    height: 600px;
+    background-color: lightgrey;
+    padding-top: 150px;
+    padding-left: 10%;
+    padding-right: 10%;
+}
+
+header h1{
+    font-size: 44px;
+}
+
+.gry-btn{
+width: 200px;
+height: 40px;
+text-align: center;
+border-radius: 5px;
+font-weight: bold;
+border: 2px solid #2b2b2b;
+padding-top: 5px;
+}
+
+.gry-btn:hover{
+    cursor: pointer;
     background-color: #2b2b2b;
     color: white;
 }
